--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -10,8 +10,9 @@ services:
     image: mysql:8.0.30-debian
     environment:
       MYSQL_ROOT_PASSWORD: root
-      MYSQL_DATABASE: nest
+      # MYSQL_DATABASE: nest
     ports:
       - 3306:3306
     volumes:
-      - ./.docker/dbdata:/var/lib/mysql
+      - ./.docker/mysql:/docker-entrypoint-initdb.d
+      # - ./.docker/dbdata:/var/lib/mysql
